Revert "MM-67742 Fixing compact image attachment alignment"
This reverts commit 828afa64c94aa4480daba99edabe3f4fefbc4d76.

--- a/webapp/channels/src/sass/components/_post.scss
+++ b/webapp/channels/src/sass/components/_post.scss
@@ -947,9 +947,7 @@
             .post-image__name {
                 @include mixins.clearfix;
 
-                display: flex;
-                align-items: center;
-                justify-content: flex-start;
+                display: block;
                 width: 100%;
                 padding: 0 5px;
                 margin: 0;
